<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#3F0000">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="60dp"
        android:padding="10dp"
        android:layout_below="@id/imgLogo"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textColorHint="#aaaaaa"
        android:hint="@string/mobile_number"
        android:background="@drawable/custom_edittext"
        android:gravity="center_horizontal" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/etMobileNumber"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"
        android:background="@drawable/custom_edittext"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:textColorHint="#aaaaaa"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_below="@id/etPassword"
        android:background="@drawable/custom_button"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#ffffff"
        />
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="20dp"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:clickable="true" />
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"
        android:padding="6dp"
        android:textColor="#ffffff"
        android:clickable="true" />

</RelativeLayout>