<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword"
    android:background="@color/colorPrimary"
    android:id="@+id/rl">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />
    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_pass_txt"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/imgLogo"/>
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/instructions"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:textColor="#ffffff"
        android:textColorHint="#aaaaaa"
        android:hint="@string/mobile_number"
        android:background="@drawable/custom_edittext"
        android:gravity="center_horizontal" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_below="@id/etMobileNumber"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:hint="@string/email_address"
        android:background="@drawable/custom_edittext"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:textColorHint="#aaaaaa"/>
    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:layout_below="@id/etEmail"
        android:background="@drawable/custom_button"
        android:text="@string/next"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="#ffffff"
        />

</RelativeLayout>